# Orange-Ai-Diploma

./: Orange-Task-One.docx  Orange-Task3.ipynb  Problem-Solving-Sheet.txt  README.md  Solved Problem.xlsx  Solved Problems .xlsx  Solved Problems.xlsx  The Second Session Tasks.docx
Employees/: CMakeLists.txt  Employees.cpp  Employees.h  Engineer.cpp  Engineer.h  Sales.cpp  Sales.h  main.cpp
IEEEXtreme  16.0/: ASCII Dancer.cpp  ReadMe.md
IEEEXtreme 0.16/: README  ReadMe.md
Sessions topics/: Orange Test (1).ipynb  Orange Test 2 ( Advanced ) .ipynb  Reguler Expression (1).ipynb  Session 9 tasks.docx  session 11.ipynb  session 3.ipynb  session 4.ipynb  session 6.ipynb  session2.ipynb
Sessions topics/Material/10- Regular Expressions/: Regular Expressions.ipynb  sample.json  testing.txt
Sessions topics/Material/16- Pandas/: Untitled.ipynb  worldpopulation.json
Sessions topics/Material/17- Matplotlib/: 10_subplots.ipynb  Matplotlib (hopfully all concepts).rar
Sessions topics/Material/19- Audio Analysis/: Audio.ipynb  Untitled.ipynb
Sessions topics/Material/9- Web Scrapping/: CoreyMS - Development, Design, DIY, and more.html  Scrapping.ipynb  Webscrapping.rar  first.py  scrape.csv  scrape5.csv  scrapped6.csv  simple.html
Sessions topics/Material/DeepLearningML/: 16_cnn_cifar10_small_image_classification.rar
Tasks/: Opencv Task.ipynb  Task 10.ipynb  Task 11,12,13.ipynb  Task 11,12.ipynb  Task 14.ipynb  Task 16.ipynb  Task 17.ipynb  Task 18.ipynb  Task 19.ipynb  Task 4.ipynb  Task 5.ipynb  Task 6.ipynb  Task 7.ipynb  Task 8.ipynb  Task9.ipynb
(+158 files in other folders)
